# mockspace

./: .gitignore  BUG_BOOTSTRAP_NO_AUTO_ACTIVATE.md  BUG_LOCK_SEMANTICS.md  Cargo.toml  LINT_SYSTEM_REDESIGN.md  README.md  TASKS_BRANCHES_PHASES_EPOCHS_DESIGN.md  TASKS_LANES_MILESTONES_DESIGN.md
.cargo/: config.toml
bench-core/: Cargo.toml  README.md
bench-core/src/: byte_routine.rs  counter.rs  lib.rs
bench-harness/: Cargo.toml
bench-harness/src/: analysis.rs  cache.rs  config.rs  disasm.rs  env.rs  error.rs  harness.rs  history.rs  inline_bench.rs  lib.rs  meta_report.rs  perf.rs  quality.rs  report.rs  sample.rs  spec.rs  validation.rs  workload.rs
bench-harness/tests/: smoke.rs
bench-macro/: Cargo.toml  README.md
bench-macro/src/: lib.rs
bench-macro/tests/: typed_form.rs
benches/: .gitignore  Cargo.toml  bench.toml
benches/src/: main.rs
benches/variants/bitwise-rotate/: Cargo.toml
benches/variants/bitwise-rotate/src/: lib.rs
benches/variants/multiply-xor/: Cargo.toml
benches/variants/multiply-xor/src/: lib.rs
docs/: USAGE_GUIDE.md
docs/research/: BUG_ARCHIVE_COMMAND.md  REFACTOR_NOTES.md
lint-rules/: Cargo.toml
lint-rules/src/: actionable_errors.rs  changelist_doc_gate.rs  changelist_helpers.rs  changelist_immutability.rs  changelist_lock.rs  changelist_required.rs  deprecation_comparison.rs  design_doc_source_mismatch.rs  export_count.rs  file_size.rs  forbidden_imports.rs  lib.rs  no_adhoc_error_enum.rs  no_adhoc_framework.rs  no_bare_macro_types.rs  no_bare_pub.rs  no_bare_result.rs  no_bare_string.rs  no_bare_vec.rs  no_box.rs  no_duplicate_fn.rs  no_empty_crate.rs  no_entry_suffix.rs  no_float.rs  no_manual_id.rs  no_manual_impl.rs  no_pool_access.rs  no_primitive_key.rs  no_raw_error_outside_primitives.rs  no_self_define.rs  no_todo.rs  no_vec_in_resource.rs  registrable_completeness.rs  repr_c_abi_safety.rs  single_source.rs  type_scanner.rs  undocumented_type.rs
mock/: Cargo.toml
mock/crates/mockspace-config/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/mockspace-config/src/: config.rs  error.rs  lib.rs  mapping.rs  parse.rs
mock/crates/mockspace-config/tests/: smoke.rs
mock/crates/mockspace-template/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/mockspace-template/src/: error.rs  lib.rs  platform.rs  renderer.rs  template.rs
mock/crates/mockspace-template/tests/: agent_render.rs  smoke.rs
mock/design_rounds/202605131900/: 202605131900_changelist.doc.lock.md  202605131900_changelist.src.lock.md  202605131900_topic.extracted-lib-crates.md
scripts/: pdf.sh
src/: bench.rs  bootstrap.rs  config.rs  design_round.rs  dylib_check.rs  entry.rs  graph.rs  lib.rs  main.rs  model.rs  parse.rs  pdf.rs  render.rs  render_agent.rs  render_design.rs  render_md.rs
src/lint/: mod.rs
