[workspace]
members = [
    ".",
    "lint-rules",
    "bench-core",
    "bench-harness",
    "bench-macro",
    "benches",
    "benches/variants/multiply-xor",
    "benches/variants/bitwise-rotate",
]

[package]
name = "mockspace"
version = "0.1.0"
edition = "2021"
publish = false
description = "Design-round workflow engine for mock workspaces"
license = "MPL-2.0"
repository = "https://github.com/hiisi-digital/mockspace"
readme = "README.md"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["design-rounds", "lints", "workflow", "mockspace"]

[[bin]]
name = "mockspace"
path = "src/main.rs"

[dependencies]
mockspace-lint-rules = { path = "lint-rules" }
libloading = "0.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
toml_edit = { version = "0.22", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

# Release profile applies to every workspace member. Lifted from the
# bench packages where it was dead config (cargo silently ignores
# non-root profile blocks when packages are workspace members).
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
