[package]
name = "mockspace-config"
version = "0.1.0"
edition = "2021"
description = "Canonical schema for mockspace.toml + IntoMockspaceConfig trait."
license = "MPL-2.0"
repository = "https://github.com/hiisi-digital/mockspace"
readme = "README.md.tmpl"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
